--- a/lang/texts.properties
+++ b/lang/texts.properties
@@ -1,3 +1,3 @@
-blockly.category.playeranimator=Player Animator
 trigger.player_animations_setup=Setup player animations (Player Animator)
 blockly.block.play_animation=If %1 is a player, play animation %2 and ignore active animations %3
+blockly.block.toggle_firstperson=Set first person arm animations to %1 (DEPRECATED, DO NOT USE)
