--- a/src/main/resources/lang/texts_zh_CN.properties
+++ b/src/main/resources/lang/texts_zh_CN.properties
@@ -5,5 +5,5 @@ workspace.player_animations.import_error=无法载入动画
 workspace.player_animations.import_error_message=导入文件中尚未存在动画.
 dialog.selector.player_animation.message=选择一个玩家动画:
 blockly.category.nerdyplayeranimator=Player Animator
-blockly.block.play_animation=If %1 is a player, play animation %2 and ignore active animations %3 如果 %1 是玩家，那么停止当前动画并播放动画 %2 %3
-blockly.block.stop_animation=If %1 is a player, stop active animation 如果 %1 是玩家，停止当前动画
+blockly.block.play_animation=如果 %1 是玩家，那么忽略当前动画 %3 并播放动画 %2
+blockly.block.stop_animation=如果 %1 是玩家，停止当前动画
