--- a/src/main/resources/lang/texts_zh_CN.properties
+++ b/src/main/resources/lang/texts_zh_CN.properties
@@ -7,3 +7,4 @@ dialog.selector.player_animation.message=选择一个玩家动画:
 blockly.category.nerdyplayeranimator=Player Animator
 blockly.block.play_animation=如果 %1 是玩家，那么播放动画 %2 (忽略当前动画: %3)
 blockly.block.stop_animation=如果 %1 是玩家，停止当前动画
+blockly.block.is_animation_playing = 玩家 %1 正在被播放动画 %2 %3
