--- a/src/main/resources/lang/texts.properties
+++ b/src/main/resources/lang/texts.properties
@@ -7,3 +7,4 @@ dialog.selector.player_animation.message=Select a player animation:
 blockly.category.nerdyplayeranimator=Player Animator
 blockly.block.play_animation=If %1 is a player, play animation %2 and ignore active animations %3
 blockly.block.stop_animation=If %1 is a player, stop active animation
+blockly.block.is_animation_playing = If %1 is a player, check if animation %2 is playing %3
