--- a/src/main/resources/lang/texts.properties
+++ b/src/main/resources/lang/texts.properties
@@ -8,3 +8,4 @@ blockly.category.nerdyplayeranimator=Player Animator
 blockly.block.play_animation=If %1 is a player, play animation %2 override active animations %3 play in first person %4
 blockly.block.stop_animation=If %1 is a player, stop active animation
 blockly.block.is_animation_playing = If %1 is a player, check if animation %2 is playing %3
+blockly.block.play_animation_advanced=If %1 is a player, play animation %2 override active animations %3 play in first person %4
